@@ -64,27 +64,21 @@ int PLATFORM_SoundSetup(Sound_setup_t *setup)
 	int sconfig[JAVANVM_InitSoundSIZE];
 	int hw_buffer_size;
 
-	if (setup->frag_frames == 0) {
-		/* Set frag_frames automatically. */
-		unsigned int val = setup->frag_frames = setup->freq * 4 / 50;
-		unsigned int pow_val = 1;
-		while (val >>= 1)
-			pow_val <<= 1;
-		if (pow_val < setup->frag_frames)
-			pow_val <<= 1;
-		setup->frag_frames = pow_val;
-	}
+	if (setup->buffer_frames == 0)
+		/* Set buffer_frames automatically. */
+		setup->buffer_frames = Sound_NextPow2(setup->freq * 4 / 50);
 
 	sconfig[JAVANVM_InitSoundSampleRate] = setup->freq;
 	sconfig[JAVANVM_InitSoundBitsPerSample] = setup->sample_size * 8;
 	sconfig[JAVANVM_InitSoundChannels] = setup->channels;
 	sconfig[JAVANVM_InitSoundSigned] = setup->sample_size == 2;
 	sconfig[JAVANVM_InitSoundBigEndian] = TRUE;
-	sconfig[JAVANVM_InitSoundBufferSize] = setup->frag_frames * setup->sample_size * setup->channels;
+	sconfig[JAVANVM_InitSoundBufferSize] = setup->buffer_frames * setup->sample_size * setup->channels;
 	hw_buffer_size = JAVANVM_InitSound((void *)sconfig);
 	if (hw_buffer_size == 0)
 		return FALSE;
-	setup->frag_frames = hw_buffer_size / setup->sample_size / setup->channels;
+	setup->buffer_frames = hw_buffer_size / setup->sample_size / setup->channels;
+
 	return TRUE;
 }
 
